--- a/Slider/style.css
+++ b/Slider/style.css
@@ -6,6 +6,43 @@
     box-sizing: border-box; /* Incluye el padding y border dentro del ancho/alto del elemento */
 }
 
+/* Configuración del header */
+header{
+    height: 100px;
+    background-color: black;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    width: 100%;
+    box-shadow: 0px 4px 3px rgb(0, 0, 0, .5);
+    position: fixed; /* Hace que el header se mantenga fijo en la parte superior al hacer scroll (Stikyheade)*/
+}
+
+/* Contenedor del contenido dentro del header */
+.contenedor{
+    width: 70%;
+    display: flex;
+    justify-content: space-around; 
+}
+
+/* Configuración de la navegación dentro del header */
+.contenedor nav{
+    display: flex;
+    align-items: center;
+    gap: 30px; /* Espacio entre los enlaces de navegación */
+    margin: 0;
+}
+
+/* Configuración de los enlaces de navegación y el título dentro del header */
+.contenedor nav a{
+    text-decoration: none; 
+    color: white; 
+}
+
+.contenedor h1{
+    color: white; /* Color del texto del título */
+}
+
 /* Contenedor del slider y navegación */
 .slider-wrapper{
     position: relative;      /* Permite posicionar elementos relativos a este contenedor */
