--- a/Manifiesto de Diseño/style.css
+++ b/Manifiesto de Diseño/style.css
@@ -42,3 +42,67 @@ header{
 .contenedor h1{
     color: white; /* Color del texto del título */
 }
+main{
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    }
+    article{
+        background-color: ghostwhite;
+        width: 70%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+article .TitleArticle{
+    font-size: 2rem;
+    margin-top: 20px;
+    left: 50%;
+    position: sticky;
+    top: 0;
+    text-align: left;
+}
+
+img{
+    max-width: 200px;
+    max-height: 200px;
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+section{
+    background-color: white;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    color: darkslategrey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+    aside{
+        background-color: #f5f5f5;
+        width: 30%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: #333;
+        box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
+    }
+
+    footer{
+        background-color: #222;
+        color: #fff;
+        text-align: center;
+        padding: 20px 0;
+        width: 100%;
+        position: relative;
+        bottom: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
