--- a/Manifiesto de Diseño/style.css
+++ b/Manifiesto de Diseño/style.css
@@ -6,17 +6,21 @@
     box-sizing: border-box; /* Incluye el padding y border dentro del ancho/alto del elemento */
 }
 
+
 /* Configuración del header */
 header{
+    background-color:  rgba(16, 16, 16, 0.8);;
+    backdrop-filter: blur(10px);
     height: 100px;
-    background-color: black;
-    display: flex;
-    justify-self: center;
-    align-items: center;
     width: 100%;
+    justify-content: center;
+    z-index: 2;
+    display: flex;
+    align-items: center;
     box-shadow: 0px 4px 3px rgb(0, 0, 0, .5);
     position: fixed; /* Hace que el header se mantenga fijo en la parte superior al hacer scroll (Stikyheade)*/
 }
+
 
 /* Contenedor del contenido dentro del header */
 .contenedor{
@@ -25,6 +29,7 @@ header{
     justify-content: space-around; 
 }
 
+
 /* Configuración de la navegación dentro del header */
 .contenedor nav{
     display: flex;
@@ -32,6 +37,7 @@ header{
     gap: 30px; /* Espacio entre los enlaces de navegación */
     margin: 0;
 }
+
 
 /* Configuración de los enlaces de navegación y el título dentro del header */
 .contenedor nav a{
@@ -42,67 +48,102 @@ header{
 .contenedor h1{
     color: white; /* Color del texto del título */
 }
+
+
+/*Configuración del body*/
+.cuerpo{
+  background-color: #101010; /* --_colors---grayscale--chaos-black */
+  background-image: radial-gradient(
+    circle at 50% 50%, 
+    rgba(53, 72, 254, 0.15) 0%, /* --_colors---brand--bright-greek con opacidad */
+    transparent 60%
+  );
+  min-height: 100vh;
+  margin: 0;
+  padding: 0 var(--horizontal-spaser--default);
+}
+
+
+/*Configuración del main*/
 main{
-    background-color: whitesmoke;
+    background-color: transparent;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    }
-    article{
-        background-color: ghostwhite;
-        width: 70%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-article .TitleArticle{
-    font-size: 2rem;
-    margin-top: 20px;
-    left: 50%;
-    position: sticky;
-    top: 0;
-    text-align: left;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 100px;
 }
 
-img{
-    max-width: 200px;
-    max-height: 200px;
-    width: auto;
-    height: auto;
+
+/*Configuración del article*/
+.articulo section h1 {
+    color: white;
+    font-size: 5.5vw; 
+    font-family: sans-serif; 
+    font-weight: 500;
+    line-height: 1.1;
+    letter-spacing: -0.02em;
+}
+
+.articulo section div h2 {
+    margin: 20px 0 0 0;
+    font-size: 1.1rem; 
+    color: #ffffff;    
+    font-weight: 400;
+}
+
+.articulo section div img{
     display: block;
-    margin: 0 auto;
+    margin: 40px auto; 
+    width: 70%;    
+    max-width: 600px; /* DEBE SER IGUAL AL DEL TEXTO */
+    height: auto;   
+    border-radius: 12px;
+    box-shadow: 0 0 30px rgba(53, 72, 254, 0.3); 
+    filter: brightness(1.1);
 }
 
-section{
-    background-color: white;
+.articulo section div p{
+    margin: 2px 0 0 0;
+    font-size: 1.0em;
+    color: rgb(216, 255, 255);
+    width: 90%;
+}
+
+
+/*Confifguración del aside*/
+.aside{
+    background: rgba(255,255,255,0.05);
+    backdrop-filter: blur(10px);
     width: 30%;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    color: darkslategrey;
+    align-items: center;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-shadow: 0px 0px 8px rgba(248, 247, 247, 0.1);
+    color: rgb(216, 255, 255);
+}
+
+.aside div img{
+    display: block;
+    margin: 30px auto;
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+
+/*Configuración del footer*/
+footer{
+    background-color: #222;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    width: 100%;
+    position: relative;
+    bottom: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-    aside{
-        background-color: #f5f5f5;
-        width: 30%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-        color: #333;
-        box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
-    }
-
-    footer{
-        background-color: #222;
-        color: #fff;
-        text-align: center;
-        padding: 20px 0;
-        width: 100%;
-        position: relative;
-        bottom: 0;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
-    }
