--- a/Curso/style.css
+++ b/Curso/style.css
@@ -29,6 +29,37 @@ a{
     margin-left: 20px;
 }
 
+#home{
+    display: grid;
+    grid-template-columns: 4fr 4fr;
+    grid-template-rows: 4fr 4fr;
+    gap: 15px;
+    margin: 20px;
+
+    #home1{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    #home2{
+        grid-column: 2/2;
+        grid-row: 2/2;
+    }
+
+    #home1, #home2{
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        padding: 20px;
+        justify-content: center;
+        align-content: center;
+        box-shadow: 2px 2px 5px rgb(0, 0, 0);
+    }
+    .divhome{
+        font-family: 'Courier New', Courier, monospace;
+    }
+}
+
 article a{
     color: black;
     text-decoration: none;
